src/style/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@font-face {
	font-family: 'MintSans';
	src: local('MintSans'), url(./MintSansRegular.woff), format('woff');
}

@font-face {
  font-family: 'FiraCode';
  src: local('FiraCode'), url(./FiraCode-VariableFont_wght.ttf), format('ttf');
}

a:hover{
  text-decoration: underline;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-property: all;
  transition-duration: 300ms;
}

.body{
  font-family: 'MintSans', sans-serif;
}

.nav{
  font-family: 'FiraCode', monospace;
}

